# elephas

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  elephas.desktop
pixmaps/: Makefile.am
po/: Makevars
src/: Makefile.am  elephas  main.c
